--- a/site.css
+++ b/site.css
@@ -1,3 +1,50 @@
+body {
+    font-family: serif;
+}
+
+/* Header */
+.bs-docs-header {
+    position: relative;
+    padding: 20px 0;
+    color: #f3f3f3;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .1);
+    background: #5e5e5e linear-gradient(to bottom, #1F1E1E 0, #5e5e5e 100%) repeat-x;
+}
+
+.bs-docs-header a {
+    color: #f3f3f3;
+}
+
+.logo-header {
+    text-shadow: 4px 3px 0 #000000, 9px 8px 0 rgba(0, 0, 0, 0.15);
+    margin-top: 10px;
+    font-size: 90px;
+}
+
+.logo-header sub {
+    font-size: 13px;
+}
+
+.header-text {
+    font-size: 20px;
+}
+
+.header-links-block {
+    padding-top: 20px;
+}
+
+.btn-header {
+    font-size: 16px;
+    color: #fff;
+    background-color: transparent;
+    border-color: #bbb;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+/* */
+
 .group {
     background: yellow;
     width: 200px;
@@ -23,10 +70,10 @@
 
 /* all links */
 .bs-docs-sidebar .nav > li > a {
-    color: #999;
+    color: #777;
     border-left: 2px solid transparent;
     padding: 4px 20px;
-    font-size: 13px;
+    font-size: 16px;
     font-weight: 400;
 }
 
@@ -42,10 +89,10 @@
 .bs-docs-sidebar .nav > .active > a,
 .bs-docs-sidebar .nav > li > a:hover,
 .bs-docs-sidebar .nav > li > a:focus {
-    color: #563d7c;
+    color: #333;
     text-decoration: none;
     background-color: transparent;
-    border-left-color: #563d7c;
+    border-left-color: #00AA88;
 }
 
 /* all active links */
@@ -72,19 +119,4 @@
     display: block;
 }
 
-.bs-docs-header, .bs-docs-masthead {
-    position: relative;
-    padding: 30px 0;
-    color: #f3f3f3;
-    text-align: center;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, .1);
-    background: #5e5e5e linear-gradient(to bottom, black 0, #5e5e5e 100%) repeat-x;
-}
 
-.logo-header {
-    /*font-weight: bold;*/
-    font-family: sans-serif;
-    text-shadow: 4px 3px 0 #000000, 9px 8px 0 rgba(0, 0, 0, 0.15);
-    margin-top: 25px;
-    font-size: 90px;
-}
